src/test/deca/context/invalid/double_decla.deca
//ERROR :5:
{
        int var =7;
        float x=9, y=10.6;
        boolean var;
        while (false != true) {
              if (x>y) {
                   var = true;
              }
              else {
                   var = false;
              }
        }
}